<resources>
    <string name="app_name">SecondApp</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="from">Your Angel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="tip">Please enter Celsius</string>
    <string name="con">Convert to Fahrenheit</string>
    <string name="res">result：</string>
    <string name="label_add3" translatable="false">+3points</string>
    <string name="label_add2" translatable="false">+2points</string>
    <string name="label_add1" translatable="false">+1point</string>
    <string name="btn_reset_label" translatable="false">Reset</string>
    <string name="btn_dollar_label" translatable="false">Dollar</string>
    <string name="btn_euro_label" translatable="false">Euro</string>
    <string name="btn_won_label" translatable="false">Won</string>
    <string name="rmb_hint" translatable="false">Input RMB</string>
    <string name="btn_opencfg_label" translatable="false">Config</string>
    <string name="btn_save_label" translatable="false">Save</string>
    <string name="menu">setting</string>
</resources>
